<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:scrollbars="vertical">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_abby"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        app:layout_constraintStart_toStartOf="@id/welcome"
        app:cardCornerRadius="360dp"
        android:paddingTop="30dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/me"
            android:contentDescription="@string/picture"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/daily_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_view"
        app:layout_constraintStart_toStartOf="@id/card_view"
        android:text="@string/your_task_for_today"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="test"
        android:hint="@string/add_task"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="@id/welcome"
        app:layout_constraintTop_toBottomOf="@id/daily_task" />

    <ImageButton
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"
        android:contentDescription="@string/addicon"
        android:contextClickable="true"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintStart_toEndOf="@id/edit_text"
        app:layout_constraintTop_toBottomOf="@id/daily_task"
        android:elevation="6dp" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/edit_text">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_viewTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="true"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

